PDFの解像度アップ。 サンプルダウンロードの追加。 広告の追加。

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>LIVE Through</title>
-    <meta content="LIVE Throughとはアーティストがライブ活動を行うにあたって必要な資料(セットリスト・ステージプロット)をホームページ上で簡単に作成する事が出来る無料のWEBサイトです。" name="description">
+    <meta content="LIVE Through（ライブスルー）とはアーティストがライブ活動を行うにあたって必要な資料(セットリスト・ステージプロット)をブラウザ上で簡単に作成する事が出来る無料のWEBアプリです。" name="description">
   </head>
   
   <body>
