--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="apple-touch-icon" href="<%= BASE_URL %>favicon.png" sizes="192x192"/>
+    <link rel="shortcut icon" href="<%= BASE_URL %>favicon.png" type="image/x-icon">
     <title>LIVE Through</title>
     <meta content="LIVE Through（ライブスルー）とはアーティストがライブ活動を行うにあたって必要な資料(セットリスト・ステージプロット)をブラウザ上で簡単に作成する事が出来る無料のWEBアプリです。" name="description">
   </head>
